[workspace]
members = [
	"bin/main",
	"bin/main/init",
	"bin/main/node",
	"utils/test",
	"core/crypto",
	"core/crypto/dylib-samples/hash",
	"core/crypto/dylib-samples/dsa",
	"core/crypto/dylib-samples/address",
	"core/primitives",
	"core/node/db",
	"core/node/statedb",
	"core/node/service",
	"core/node/executor",
	"core/node/executor/primitives",
	"core/node/executor/executor-macro",
	"core/node/txpool",
	"core/node/chain",
	"core/module/system",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
