[workspace]
members = [
	"bin/main",
	"bin/main/init",
	"bin/main/node",
	"utils/test",
	"core/crypto",
	"core/crypto/dylib-samples/hash",
	"core/crypto/dylib-samples/dsa",
	"core/crypto/dylib-samples/address",
	"core/primitives",
	"core/node/db",
	"core/node/statedb",
	"core/node/service",
	"core/node/executor",
	"core/node/executor/primitives",
	"core/node/executor/executor-macro",
	"core/node/txpool",
	"core/node/chain",
	"core/node/api",
	"core/node/consensus",
	"core/node/consensus/solo",
	"core/node/vm",
	"core/node/vm/contract-sdk",
	"core/node/vm/contract-sdk-primitives",
	"core/node/vm/contract-sdk-macro",
	"core/node/vm/contract-samples/hello-world",
#	"core/node/vm/contract-samples/token",
	"core/module/system",
	"core/module/balance",
	"core/module/solo",
	"core/module/contract",
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
