[package]
name = "crypto"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_crypto = { version = "0.2.36", package = "rust-crypto" }
yogcrypt = "0.0.0"
error-chain = "0.12.2"
