[package]
name = "primitives"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
parity-codec = "4.1.4"
parity-codec-derive = "3.3.0"
