[package]
name = "primitives"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = { package = "parity-scale-codec", version = "1.3", features = ["derive"] }
derive_more = "0.99"
smallvec = "1.2.0"
hex = "0.4.2"

hash_enum = { path = "../../utils/hash_enum" }

[dev-dependencies]
