[package]
name = "primitives"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
smallvec = "1.2.0"
hex = "0.4.2"
bincode = "1.2"
scale-codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
[dev-dependencies]
