[package]
name = "hash_enum"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hash_enum_derive = { path = "../hash_enum_derive" }

[dev-dependencies]
rust-crypto = { version = "0.2.36" }
