[package]
name = "hash_enum_derive"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "0.15"
quote = "0.6"
heck = "0.3.1"
proc-macro2 = "0.4.4"
rust-crypto = { version = "0.2.36" }
