[package]
name = "utils-test"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.12.0"
crypto = { path = "../../core/crypto" }
primitives = { path = "../../core/primitives" }
