[package]
name = "balance"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

primitives = { path = "../../primitives" }
executor-primitives = { package = "node-executor-primitives", path = "../../node/executor/primitives" }
executor-macro = { package = "node-executor-macro", path = "../../node/executor/executor-macro" }
