[package]
name = "module-contract"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

primitives = { path = "../../primitives" }
executor-primitives = { package = "node-executor-primitives", path = "../../node/executor/primitives" }
executor-macro = { package = "node-executor-macro", path = "../../node/executor/executor-macro" }
node-vm = { package = "node-vm", path = "../../node/vm" }
module-balance = { path = "../balance" }