[package]
name = "module-system"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = { version = "4.1.4", features = ["derive"] }

hash_enum = { path = "../../../utils/hash_enum" }
primitives = { path = "../../primitives" }
node-executor-primitives = { path = "../../node/executor/primitives" }

