[package]
name = "node-chain"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-codec = { package = "parity-scale-codec", version = "1.3", features = ["derive"] }
toml = "0.5.6"
serde = "1.0"
serde_json = "1.0"
chrono = "0.4.11"
log = "0.4.8"
hex = "0.4.2"

primitives = { path = "../../primitives" }
crypto = { path = "../../crypto" }
node-db = { path = "../db" }
node-statedb = { path = "../statedb" }
node-executor = { path = "../executor" }
main-base = { path = "../../../bin/main/base" }
