[package]
name = "node-chain"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.6"
serde_json = "1.0"
chrono = "0.4.11"
log = "0.4.8"
hex = "0.4.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
futures = "0.3.8"
parking_lot = "0.10.0"

primitives = { path = "../../primitives" }
crypto = { path = "../../crypto" }
node-db = { path = "../db" }
node-statedb = { path = "../statedb" }
node-executor = { path = "../executor" }
node-executor-primitives = { path = "../executor/primitives" }
main-base = { path = "../../../bin/main/base" }

[dev-dependencies]
tempfile = "3.1.0"
env_logger = "0.7.1"
utils-test = { path = "../../../utils/test" }
