[package]
name = "node-consensus"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"

node-chain = { path = "../chain" }
node-txpool = { path = "../txpool" }
primitives = { path = "../../primitives" }
