[package]
name = "node-consensus"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
log = "0.4.8"
futures = "0.3.8"
parking_lot = "0.10.0"

primitives = { path = "../../primitives" }
node-consensus-primitives = { path = "primitives" }
node-consensus-base = { path = "base" }
node-consensus-poa = { path = "./poa" }

