[package]
name = "node-coordinator"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
futures = "0.3.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }

node-chain = { path = "../chain" }
