[package]
name = "node-coordinator"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
futures = "0.3.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
scale-codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }
log = "0.4.8"
lru = "0.6.1"
futures-timer = "3.0.2"
derive_more = "0.99"

node-chain = { path = "../chain" }
node-txpool = { path = "../txpool" }
node-executor = { path = "../executor" }
node-executor-primitives = { path = "../executor/primitives" }
node-network = { path = "../network" }
primitives = { path = "../../primitives" }
node-consensus = { path = "../consensus" }
node-consensus-base = { path = "../consensus/base" }

[dev-dependencies]
tempfile = "3.1.0"
env_logger = "0.7.1"

crypto = { path = "../../crypto" }
utils-test = { path = "../../../utils/test" }
