[package]
name = "node-db"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
smallvec = "1.2.0"
rocksdb = "0.13.0"
num_cpus = "1.0"
parking_lot = "0.10.0"

[dev-dependencies]
tempfile = "3.1.0"
