[package]
name = "node-db"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.15.0"
num_cpus = "1.0"
parking_lot = "0.10.0"

primitives = { path = "../../primitives" }

[dev-dependencies]
tempfile = "3.1.0"
