[package]
name = "node-executor"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

node-db = { path = "../db" }
node-statedb = { path = "../statedb" }
primitives = { path = "../../primitives" }
module-system = { path = "../../module/system" }
node-executor-primitives = { path = "primitives" }

[dev-dependencies]
chrono = "0.4.11"
crypto = { path = "../../crypto" }
tempfile = "3.1.0"
