[package]
name = "node-network"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libp2p]
version = "0.31.1"
default-features = false
features = ["identify", "noise", "ping", "tcp-async-std", "yamux"]

[dependencies]
fnv = "1.0.6"
derive_more = "0.99"
futures_codec = "0.4.0"
unsigned-varint = { version = "0.5.0", features = ["futures", "futures-codec"] }
futures = "0.3.8"
pin-project = "0.4.6"
tokio ={ version = "0.2.17", features = ["time"] }
