[package]
name = "node-peer-manager"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.31.2", default-features = false }
linked-hash-map = "0.5"
tokio ={ version = "0.2.17", features = ["sync"] }

primitives = { path = "../../primitives" }
