[package]
name = "node-peer-manager"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.31.1", default-features = false }
linked-hash-map = "0.5.3"
futures = "0.3.8"
log = "0.4.8"

primitives = { path = "../../primitives" }

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
futures-timer = "3.0.2"
