[package]
name = "node-service"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.2"
parity-codec = "4.1.4"
toml = "0.5.6"
serde = "1.0"
serde_json = "1.0"

primitives = { path = "../../primitives" }
crypto = { path = "../../crypto" }
node-db = { path = "../db" }
node-statedb = { path = "../statedb" }
main-base = { path = "../../../bin/main/base" }
