[package]
name = "node-service"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.17", features = ["rt-core", "time", "sync", "stream", "macros", "signal"] }
async-std = { version = "1.8.0", features = ["attributes"] }
futures = "0.3.8"
toml = "0.5.6"
chrono = "0.4.11"
log = "0.4.8"
hex = "0.4.2"

primitives = { path = "../../primitives" }
crypto = { path = "../../crypto" }
node-db = { path = "../db" }
node-statedb = { path = "../statedb" }
node-executor = { path = "../executor" }
node-chain = { path = "../chain" }
node-txpool = { path = "../txpool" }
node-api = { path = "../api" }
node-consensus = { path = "../consensus" }
node-consensus-solo = { path = "../consensus/solo" }
main-base = { path = "../../../bin/main/base" }
