[package]
name = "node-service"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros", "signal"] }
futures = "0.3.8"
toml = "0.5.6"
chrono = "0.4.11"
log = "0.4.8"
hex = "0.4.2"

primitives = { path = "../../primitives" }
crypto = { path = "../../crypto" }
node-db = { path = "../db" }
node-statedb = { path = "../statedb" }
node-executor = { path = "../executor" }
node-chain = { path = "../chain" }
node-txpool = { path = "../txpool" }
node-api = { path = "../api" }
node-consensus = { path = "../consensus" }
node-consensus-poa = { path = "../consensus/poa" }
node-coordinator = { path = "../coordinator" }
main-base = { path = "../../../bin/main/base" }
