[package]
name = "node-txpool"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
tokio ={ version = "0.2.17", features = ["rt-core", "time", "sync", "stream", "macros"] }
parking_lot = "0.10"
log = "0.4.8"

primitives = { path = "../../primitives" }
node-chain = { path = "../chain" }
node-executor = { path = "../executor" }
node-executor-primitives = { path = "../executor/primitives" }

[dev-dependencies]
crypto = { path = "../../crypto" }
utils-test = { path = "../../../utils/test" }
rand = "0.4.6"
futures = "0.3"
tempfile = "3.1.0"
