[package]
name = "node-txpool"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
parking_lot = "0.10"
log = "0.4.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
futures = "0.3.8"

primitives = { path = "../../primitives" }
node-chain = { path = "../chain" }
node-executor = { path = "../executor" }
node-executor-primitives = { path = "../executor/primitives" }

[dev-dependencies]
crypto = { path = "../../crypto" }
utils-test = { path = "../../../utils/test" }
rand = "0.4.6"
futures = "0.3.8"
tempfile = "3.1.0"
