[package]
name = "node-vm"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.4.1"
wasmer-runtime = { version = "=0.17.0", features = ["default-backend-singlepass"], default-features = false }
wasmer-runtime-core = { version = "=0.17.0" }
lru = "0.6.1"
parking_lot = "0.10.0"
parity-wasm = "0.41"
pwasm-utils = "0.12"
serde_json = "1.0"
byteorder = "1.3.4"
serde = { version = "1.0", features = ["derive"] }

primitives = { path = "../../primitives" }

[dev-dependencies]
utils-test = { path = "../../../utils/test" }
crypto = { path = "../../crypto" }

