[package]
name = "crypto-dylib-samples-address"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_crypto = { version = "0.2.36", package = "rust-crypto" }

crypto = { path = "../../"}

[dev-dependencies]
utils = { path = "../../../../utils" }
libloading = "0.5.2"

[features]
build-dep-test = []
