[package]
name = "crypto-dylib-samples-dsa"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = { version = "0.9", features=["std"] }
error-chain = "0.12.2"
sha2 = "0.8"
rand = "0.6.5"

crypto = { path = "../../"}

[dev-dependencies]
utils-test = { path = "../../../../utils/test" }
libloading = "0.5.2"

[features]
build-dep-test = []
