[package]
name = "node-api-rt"
version = "0.1.0"
authors = ["guoxbin <guoxbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.17", features = ["rt-core", "time", "sync", "stream", "macros"] }
futures = "0.3.8"
actix-rt = "1.1.0"
