[package]
name = "node-consensus-base"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
futures-timer = "3.0.2"
log = "0.4.8"
serde_json = "1.0"

node-chain = { path = "../../chain" }
node-txpool = { path = "../../txpool" }
node-network = { path = "../../network" }
primitives = { path = "../../../primitives" }
