[package]
name = "node-consensus-poa"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
log = "0.4.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
futures-timer = "3.0.2"

node-consensus = { path = ".." }
primitives = { path = "../../../primitives" }
node-chain = { path = "../../chain" }
node-txpool = { path = "../../txpool" }
node-executor = { path = "../../executor" }
node-executor-primitives = { path = "../../executor/primitives" }
crypto = { path = "../../../crypto" }

[dev-dependencies]
tempfile = "3.1.0"
env_logger = "0.7.1"
hex = "0.4.2"

utils-test = { path = "../../../../utils/test" }
