[package]
name = "node-consensus-poa"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
futures = "0.3.8"
log = "0.4.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "sync", "macros"] }
futures-timer = "3.0.2"
scale-codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"] }

node-consensus-primitives = { path = "../primitives" }
node-consensus-base = { path = "../base" }
primitives = { path = "../../../primitives" }
node-chain = { path = "../../chain" }
node-executor = { path = "../../executor" }
node-executor-primitives = { path = "../../executor/primitives" }
crypto = { path = "../../../crypto" }

[dev-dependencies]

