[package]
name = "node-executor-macro"
version = "0.1.0"
authors = ["developer <developer@wingchain.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"

primitives = { path = "../../../primitives" }
executor-primitives = { package = "node-executor-primitives", path = "../primitives" }
